syntax = "proto3";

package kv_store;

service KvStore {
  rpc Example (ExampleRequest) returns (ExampleReply) {}

  // TODO: Protocol buffers
}

message ExampleRequest {
  uint32 input = 1;
}

message ExampleReply {
  uint32 output = 1;
}

// TODO: Protocol buffers
